# ira-v3

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  IRA_MASTER_PLAN.md  LICENSE  OPERATIONS_MANUAL.md  Procfile  README.md  SECURITY.md  SOUL.md  VISION.md  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.yml  docs_ARCHITECTURE.md  dream_log.json  nixpacks.toml  promptfooconfig.yaml  pyproject.toml  vision_map.md
.github/: PULL_REQUEST_TEMPLATE.md
alembic/: README.md  env.py
crm/: __init__.py  customer_health.py  european_drip_campaign.py  follow_up_automation.py  hubspot_client.py  ira_crm.py  lead_enrichment.py  lead_intelligence.py  quote_lifecycle.py
data/: .graph_backfill_state.json  machine_knowledge.json
docs/: ANU_AI_RECRUITER.md  ARCHITECTURE.md  AUDIT_CURSOR_AS_FRONT_END.md  CRM_DATA_SOURCES_GAP.md  CRM_POPULATOR.md  CRM_SEGMENT_AUDIT.md  CURSOR_AGENTIC_LOOP.md  CURSOR_EMAIL_SCOPE.md  CURSOR_SPHINX_AND_AGENTIC_FLOW.md  CURSOR_WORKFLOWS.md  DATA_STORES_AUDIT.md  DEEP_INGESTION_PLAN.md  EMAIL_WORKFLOW.md  GETTING_STARTED.md  IMPORTS_QUOTE_SEMANTICS.md  INGESTION_IMPROVEMENTS_IMPLEMENTATION_PLAN.md  INGESTION_IMPROVEMENTS_ROADMAP.md  INGESTION_STATE_OF_THE_ART.md  IRA_STARTUP_AND_LLM_HEALTH.md  LEADS_CLASSIFY_BY_COMMUNICATION.md  NEO4J_GRAPH_DENSITY.md  QDRANT_LOCAL_AND_CLOUD_SYNC.md  README.md  RECRUITMENT_DRIVE_DRIP.md  START_IRA_IN_CURSOR.md  SYSTEM_AUDIT.md  TIMEOUT_MODEL.md  TROUBLESHOOTING.md  WHY_IRA.md  stable_modes.md  takeout_data_audit.md
learning/: __init__.py  learning_hub.py  prediction_log.py
observers/: realtime_observer.py
prompts/: README.md  account_summary.txt  aegis_system.txt  aletheia_system.txt  alexandros_system.txt  anu_export_summary.txt  anu_mentor_system.txt  anu_parse_resume.txt  anu_recruitment_stage2_draft.txt  anu_score.txt  anu_score_dimensions.txt  anu_system.txt  arachne_system.txt  artemis_system.txt  asclepius_system.txt  assess_knowledge.txt  athena_delegation.txt  athena_delegation.yaml  athena_system.txt  atlas_system.txt  board_meeting_synthesis.txt  cadmus_system.txt  calliope_system.txt  chiron_system.txt  circulatory_sync.txt  clio_system.txt  compare_machines.txt  consolidate_episode.txt  conversation_extract_entities.txt  conversation_resolve_coreferences.txt  correction_analysis.txt  customer_health.txt  decompose_query.txt  delphi_classify_contact.txt  delphi_system.txt  detect_emotion.txt  digestive_email_meta.txt  digestive_extract_contacts.txt  digestive_nutrient.txt  digestive_summarize.txt  (+59 more)
sales/: autonomous_drip_engine.py  campaign_self_evaluator.py  drip_dream_reflection.py  proactive_outreach.py  quote_generator.py  scheduler.py
scripts/: README.md  add_lead2_ruslan_crm_entry.py  add_vladimir_crm_entry.py  agent_audit.py  agentic_board_meeting.py  ask_ira.py  backfill_relationships.py  benchmark.py  build_candidate_database_from_imports.py  cfo_email_body.html  cfo_email_tally_story.html  cfo_email_tally_update.html  check_european_lead_conversations.py  check_lead_contact_history.py  classify_import_leads_by_communication.py  crm_gmail_sync.py  crm_to_neo4j_sync.py  data_audit.py  dedup_ingestion_chunks.py  deep_scan_leads.py  download_email_attachments.py  draft_lead21_full_workflow.py  draft_lead_email_enriched.py  draft_lead_engagement_email.py  draft_reminder_peter_abnamro.md  enrich_company_metadata.py  enrich_crm_with_apollo.py  enrich_graph.py  entrypoint.sh  extract_alp_bedliner_project.py  extract_customers_leads_from_quotes.py  extract_inquiry_full_threads.py  fetch_news_for_marc_email.py  filter_communicated_leads_exclude_customers.py  find_company_contacts.py  first_board_meeting.py  generate_v4_asset_manifest.py  hot_leads_email_count.py  hot_leads_report.py  ingest_mailbox.py  (+104 more)
tests/: README.md  conftest.py  eval_dataset.json  test_agent_canonical_path.py  test_agent_skill_behaviors.py  test_agents.py  test_anti_hallucination.py  test_asana_planning_mapper.py  test_atlas_asana_exports.py  test_brain.py  test_brain_fixes.py  test_brain_modules.py  test_circulatory.py  test_config_neo4j_auth.py  test_context.py  test_crm.py  test_crm_enricher.py  test_db_lifecycle.py  test_dlp.py  test_document_ai.py  test_drip_engine.py  test_eval.py  test_gap_resolver.py  test_google_docs.py  test_immune_cloud.py  test_imports_intents.py  test_ingestion.py  test_ingestion_audit.py  test_ingestion_reconcile.py  test_interfaces.py  test_knowledge_graph.py  test_mcp_server.py  test_memory.py  test_pdfco.py  test_pipeline_loop.py  test_provenance.py  test_query_smoke.py  test_react_loop.py  test_redis.py  test_retriever_resilience.py  (+8 more)
tools/: analysis_tools.py  (+5 more)
(+521 files in other folders)
