[tool.poetry]
name = "ira"
version = "3.0.0"
description = "Ira – Machinecraft AI Pantheon"
authors = ["Machinecraft"]
packages = [{ include = "ira", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.0"
pydantic-settings = "^2.0"
httpx = ">=0.27"
tiktoken = ">=0.7"
qdrant-client = "^1.9"
neo4j = "^5.0"
sqlalchemy = {version = "^2.0", extras = ["asyncio"]}
aiosqlite = ">=0.20"
apscheduler = "^3.10"
flashrank = ">=0.2"
greenlet = "^3.3.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = ">=0.23"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
