[tool.poetry]
name = "ira"
version = "3.4.0"
description = "Ira – Machinecraft AI Pantheon: a multi-agent AI system that runs a manufacturing company"
authors = ["Machinecraft <rushabh@machinecraft.org>"]
license = "Proprietary"
readme = "README.md"
packages = [{ include = "ira", from = "src" }]
classifiers = [
    "Private :: Do Not Upload",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Typing :: Typed",
]

[tool.poetry.urls]
Homepage = "https://machinecraft.org"
Repository = "https://github.com/doshirush1901/ira-v3"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.0"
pydantic-settings = "^2.0"
httpx = ">=0.27"
tiktoken = ">=0.7"
qdrant-client = "^1.9"
neo4j = "^5.0"
sqlalchemy = {version = "^2.0", extras = ["asyncio"]}
aiosqlite = ">=0.20"
apscheduler = "^3.10"
flashrank = ">=0.2"
greenlet = "^3.3.2"
google-api-python-client = "^2.0"
google-auth-httplib2 = ">=0.2"
google-auth-oauthlib = "^1.0"
typer = ">=0.12"
rich = ">=13.0"
fastapi = ">=0.115"
uvicorn = {version = ">=0.30", extras = ["standard"]}
python-multipart = ">=0.0.9"
jinja2 = ">=3.1"
asyncpg = ">=0.29"
pypdf = "^6.7.5"
openpyxl = "^3.1.5"
python-docx = "^1.2.0"
python-pptx = "^1.0.2"
mem0ai = ">=0.1"
alembic = ">=1.13"
redis = {version = ">=5.0", extras = ["hiredis"]}
openai = ">=1.0"
anthropic = ">=0.30"
langfuse = ">=2.0"
sse-starlette = "^3.3.2"
crawl4ai = "^0.8.0"
docling = "^2.77.0"
chonkie = "^1.5.6"
deepeval = "^3.8.9"
guardrails-ai = "^0.9.1"
gliner = "^0.2.25"
instructor = ">=1.14"
ragas = ">=0.2"
neo4j-graphrag = ">=1.0"
mcp = ">=1.0"
sentry-sdk = {version = ">=2.0", extras = ["fastapi"]}
xlrd = "^2.0.2"
aiofiles = ">=24.0"
voyageai = "^0.3.0"

[tool.poetry.scripts]
ira = "ira.interfaces.cli:app"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = ">=0.23"
pytest-cov = ">=5.0"
ruff = ">=0.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
addopts = "-q --tb=short"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "RUF",   # ruff-specific rules
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function call in argument defaults (FastAPI Depends)
    "SIM108", # use ternary operator (readability preference)
]

[tool.ruff.lint.isort]
known-first-party = ["ira"]

[tool.ruff.format]
quote-style = "double"
